@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-12-02T01:13:39Z",
+  "timestamp" : "2025-12-02T12:34:13Z",
   "count_outdated" : 10065,
   "uniques_outdated" : 5074,
-  "count" : 10121,
-  "uniques" : 5117,
+  "count" : 10124,
+  "uniques" : 5119,
   "clones" : [
     {
       "timestamp": "2025-11-19T00:00:00Z",
@@ -73,6 +73,15 @@
       "count": 4,
       "count_minmax": [ 4, 4 ],
       "count_decinc": [ 0, 4 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-12-02T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
