@@ -1,3 +1,12 @@
+2025-12-02T12:34:13Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19858753562 # 1341
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-02
+* notice: last 14d: unq all: 38 59
+* notice: prev accum: outdated-unq outdated-all / unq all: 5074 10065 / 5117 10121
+* notice: next accum: outdated-unq outdated-all / unq all: 5074 10065 / 5119 10124
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2025-12-02]
+
 2025-12-02T01:13:39Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19843224142 # 1340
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-02
